kubernetes/apps/gamja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamja
  namespace: irc
spec:
  type: ClusterIP
  selector:
    app: gamja
  ports:
    - port: 8081
      targetPort: 8081
      name: http
